--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Depends:
     GGally (>= 0.5.0),
     haven (>= 0.2.0),
     lubridate (>= 1.5.0),
-    rsconnect (>= ),
+    rsconnect (>= 0.4.1),
     shiny (>= 0.12.2),
     stringr (>= 1.0.0),
     tidyr (>= 0.3.1)
