--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: nmisc
 Title: Miscelaneous helper functions of my own
-Version: 20180211
+Version: 0.20180328
 Authors@R: person("Neil", "Shephard", email = "nshephard@gmail.com", role = c("aut", "cre"))
 Description: Personal helper functions
 Depends:
@@ -22,4 +22,4 @@ Depends:
     tidyr (>= 0.3.1)
 License: GPL-2
 LazyData: true
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
