--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,20 @@
 Package: nmisc
 Title: Miscelaneous helper functions of my own
-Version: 0.20180328
+Version: 0.20180509
 Authors@R: person("Neil", "Shephard", email = "nshephard@gmail.com", role = c("aut", "cre"))
 Description: Personal helper functions
 Depends:
-    R (>= 3.2.2),
+    R (>= 3.5.0),
     devtools (>= 1.9.1),
-    dplyr (>= 0.4.1),
     googlesheets (>= 0.1.0),
-    ggplot2 (>= 1.0.1),
     ggthemes (>= 3.0.1),
     ggvis (>= 0.4.2),
     GGally (>= 0.5.0),
-    haven (>= 0.2.0),
-    lubridate (>= 1.5.0),
     rsconnect (>= 0.4.1),
     shiny (>= 0.12.2),
     shinydashboard (>= 0.6.1),
     shinythemes (>= 1.1.1),
-    stringr (>= 1.0.0),
-    tidyr (>= 0.3.1)
+    tidyverse (>= 1.2.1)
 License: GPL-2
 LazyData: true
 RoxygenNote: 6.0.1
